tests/spec/emit/snapshots/tuple_struct_field_zero_fill_uses_f_names.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct MP(int, string)
  
  struct Holder {
    pub p: MP,
  }
  
  fn make() -> Holder {
    Holder { .. }
  }
---
package main

type MP struct {
	F0 int
	F1 string
}

type Holder struct {
	P MP
}

func make_() Holder {
	return Holder{P: MP{
		F0: 0,
		F1: "",
	}}
}
