tests/spec/emit/snapshots/tuple_struct_function_vs_constructor.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point(int, int)
  
  fn add_points(a: Point, b: Point) -> Point {
    let Point(x1, y1) = a;
    let Point(x2, y2) = b;
    Point(x1 + x2, y1 + y2)
  }
  
  fn test() -> Point {
    let p1 = Point(1, 2);
    let p2 = Point(3, 4);
    add_points(p1, p2)
  }
---
package main

type Point struct {
	F0 int
	F1 int
}

func addPoints(a, b Point) Point {
	x1 := a.F0
	y1 := a.F1
	x2 := b.F0
	y2 := b.F1
	return Point{
		F0: x1 + x2,
		F1: y1 + y2,
	}
}

func test() Point {
	p1 := Point{
		F0: 1,
		F1: 2,
	}
	p2 := Point{
		F0: 3,
		F1: 4,
	}
	return addPoints(p1, p2)
}
