tests/spec/emit/snapshots/tuple_struct_generic_single_field.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Wrapper<T>(T)\n\nfn test() -> Wrapper<int> {\n  Wrapper(42)\n}\n"
---
package main

type Wrapper[T any] struct {
	F0 T
}

func test() Wrapper[int] {
	return Wrapper[int]{F0: 42}
}
