tests/spec/emit/snapshots/tuple_struct_if_let.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point(int, int)
  
  fn test(p: Option<Point>) -> int {
    if let Some(Point(x, y)) = p {
      x + y
    } else {
      0
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Point struct {
	F0 int
	F1 int
}

func test(p lisette.Option[Point]) int {
	if p.Tag == lisette.OptionSome {
		return p.SomeVal.F0 + p.SomeVal.F1
	}
	return 0
}
