tests/spec/emit/snapshots/tuple_struct_match_guard.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point(int, int)
  
  fn test(p: Point) -> int {
    match p {
      Point(x, y) if x > 0 => x + y,
      Point(_, y) => y,
    }
  }
---
package main

type Point struct {
	F0 int
	F1 int
}

func test(p Point) int {
	{
		x := p.F0
		if x > 0 {
			return x + p.F1
		}
	}
	{
		return p.F1
	}
}
