tests/spec/emit/snapshots/tuple_struct_multi_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point(int, int)
  
  fn test(p: Point) -> int {
    p.0 + p.1
  }
---
package main

type Point struct {
	F0 int
	F1 int
}

func test(p Point) int {
	return p.F0 + p.F1
}
