tests/spec/emit/snapshots/tuple_struct_multi_field_def.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point(int, int)\n"
---
package main

type Point struct {
	F0 int
	F1 int
}
